--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
                             <span id="commits-per-repo">10</span>
                         </div>
                         <div class="repo-stat">
+                            <span class="stat-label">XP per repo:</span>
+                            <span id="xp-per-repo">5</span>
+                        </div>
+                        <div class="repo-stat">
                             <span class="stat-label">Creation time:</span>
                             <span id="repo-creation-time">30s</span>
                         </div>
@@ -206,6 +210,7 @@
                     <div class="upgrade" id="repo-output">
                         <h3>Better Repos</h3>
                         <p>+50% commits per repo</p>
+                        <p>+50% XP per repo</p>
                         <p>Cost: <span class="cost">800</span> commits</p>
                         <p class="level-required">Level 5 required</p>
                         <p class="upgrade-count">Owned: <span class="count">0</span></p>
